--- a/style.css
+++ b/style.css
@@ -163,30 +163,31 @@ sup {
   justify: center;
   height: 20px;
   grid-template-columns: auto auto auto auto;
-  column-gap: 40px;
+  column-gap: 0px;
   border-style: solid none solid none;
   border-color: grey;
   border-width: thin;
-  padding: 10px 70px 10px 70px;
+  padding: 10px 30px 10px 40px;
 }
 
 .logos-techs {
   display: grid;
   column-gap: 0px;
   align-items: left;
-  grid-template-columns: 70px 30px;
+  grid-template-columns: 120px 30px;
 }
 
 .logos-brands {
   display: grid;
-  column-gap: 20px;
-  align-items: left;
+  column-gap: 10px;
+  align-items: right;
+  padding-left: 20px;
   grid-template-columns: auto auto auto auto auto auto;
 }
 
 .separator {
   display: block;
-  padding-left: 10px;
+  padding-left: 40px;
   margin-top: -1px;
   color: grey;
 }
@@ -194,7 +195,7 @@ sup {
 .logos-social {
   display: grid;
   padding-left: 10px;
-  column-gap: 7px;
+  column-gap: 0px;
   align-items: right;
   grid-template-columns: auto auto auto auto;
 }
@@ -202,7 +203,7 @@ sup {
 .logo-dolby {
   justify-content: center;
   padding-top: 5px;
-  height: 14px;
+  height: 11px;
 }
 
 .logo-dts {
@@ -240,7 +241,7 @@ sup {
 .logo-lg {
   justify-content: center;
   padding-top: 5px;
-  height: 10px;
+  height: 11px;
 }
 
 .logo-letterboxd {
