--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ sup {
   border-style: solid none solid none;
   border-color: grey;
   border-width: thin;
-  padding: 10px 30px 10px 40px;
+  padding: 10px 25px 10px 35px;
 }
 
 .logos-techs {
@@ -173,17 +173,17 @@ sup {
 
 .separator {
   display: block;
-  padding-left: 40px;
+  padding-left: 32px;
   margin-top: -1px;
   color: grey;
 }
 
 .logos-social {
   display: grid;
-  padding-left: 10px;
-  column-gap: 0px;
+  padding-left: 5px;
+  column-gap: 3px;
   align-items: right;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
 }
 
 .logo-dolby {
@@ -231,6 +231,12 @@ sup {
 }
 
 .logo-letterboxd {
+  justify-content: center;
+  padding-top: 1px;
+  height: 17px;
+}
+
+.logo-tvtime {
   justify-content: center;
   padding-top: 1px;
   height: 17px;
