--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ sup {
   border-style: solid none solid none;
   border-color: grey;
   border-width: thin;
-  padding: 10px 25px 10px 35px;
+  padding: 10px 27px 10px 38px;
 }
 
 .logos-techs {
@@ -180,10 +180,10 @@ sup {
 
 .logos-social {
   display: grid;
-  padding-left: 5px;
+  padding-left: 2px;
   column-gap: 3px;
   align-items: right;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: auto auto auto auto;
 }
 
 .logo-dolby {
@@ -231,12 +231,6 @@ sup {
 }
 
 .logo-letterboxd {
-  justify-content: center;
-  padding-top: 1px;
-  height: 17px;
-}
-
-.logo-tvtime {
   justify-content: center;
   padding-top: 1px;
   height: 17px;
