Added 'UP NEXT' link to the right of 'NEXT RELEASE' title bar

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ sup {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
   column-gap: 7px;
+  margin-top: 23px;
 }
 
 .links {
