--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a:visited {
 a:hover {
   color: white;
   text-decoration: none;
-  filter: brightness(180%);
+  /* filter: brightness(180%); */
 }
 
 ul {
