Adjusted distance from Streaming section to Physical Media section

--- a/style.css
+++ b/style.css
@@ -318,6 +318,9 @@ sup {
   'screen av_tech'
   'gear media'
   'gear streaming'
+  'gear streaming'
+  'gear streaming'
+  'gear streaming'
   'decor stuff'
   'films films'
   'links links'
